[gd_scene load_steps=21 format=3 uid="uid://ci7460cpuw0vi"]

[ext_resource type="Texture2D" uid="uid://byynw0t5uf748" path="res://assets/sprites/field_objects/mouse_trap.png" id="1_a5sn5"]
[ext_resource type="Script" path="res://scenes/field_objects/mousetrap/mousetrap.gd" id="1_x4y5i"]
[ext_resource type="PackedScene" uid="uid://c7wv0n5n7l7x4" path="res://scenes/components/health_component/health_component.tscn" id="3_2gpsw"]
[ext_resource type="PackedScene" uid="uid://cspcugxorotor" path="res://scenes/components/hurtbox_component/hurtbox_component.tscn" id="4_y8my7"]
[ext_resource type="PackedScene" uid="uid://cfo1rpvdpemxj" path="res://scenes/components/hit_flash_component/hit_flash_component.tscn" id="5_8fq64"]
[ext_resource type="Shader" path="res://vfx/whiten/whiten.gdshader" id="6_bj1o3"]
[ext_resource type="AudioStream" uid="uid://cl10qyiaq7dfh" path="res://assets/audios/energy/sci-fi_shield_device_small_03.wav" id="7_tnxa0"]
[ext_resource type="AudioStream" uid="uid://7pewhipx7ua2" path="res://assets/audios/energy/sci-fi_shield_device_small_02.wav" id="8_3b7kf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l71cc"]
size = Vector2(28, 9)

[sub_resource type="Animation" id="Animation_wf3jr"]
resource_name = "enclose"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wall/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wall/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wall/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActivateArea/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("EncloseSE:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ftdmn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wall/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wall/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wall/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActivateArea/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("EncloseSE:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BrokenSE:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5itk6"]
resource_name = "break"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wall/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wall/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Wall/CollisionShape2D3:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActivateArea/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BrokenSE:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ux8bi"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5l0m4"]
_data = {
"RESET": SubResource("Animation_ftdmn"),
"break": SubResource("Animation_5itk6"),
"enclose": SubResource("Animation_wf3jr"),
"idle": SubResource("Animation_ux8bi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn7s1"]
size = Vector2(2, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oakcj"]
size = Vector2(2, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojiin"]
size = Vector2(28, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j4gw"]
size = Vector2(26, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfv3m"]
size = Vector2(42, 38)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lfnok"]
resource_local_to_scene = true
shader = ExtResource("6_bj1o3")
shader_parameter/mix_weight = 0.0
shader_parameter/alpha = 1.0
shader_parameter/color = Color(1, 1, 1, 1)

[node name="Mousetrap" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_x4y5i")

[node name="TrapMarker" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_l71cc")
one_way_collision = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -14)
texture = ExtResource("1_a5sn5")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5l0m4")
}

[node name="Wall" type="StaticBody2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(13, -19)
shape = SubResource("RectangleShape2D_bn7s1")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2(-13, -19)
shape = SubResource("RectangleShape2D_oakcj")
disabled = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wall"]
position = Vector2(0, -39.5)
shape = SubResource("RectangleShape2D_ojiin")
disabled = true

[node name="ActivateArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_4j4gw")
debug_color = Color(0.745098, 0.356863, 0.752941, 0.419608)

[node name="TranslateMarker" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="HealthComponent" parent="." instance=ExtResource("3_2gpsw")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_y8my7")]
collision_layer = 4
collision_mask = 8
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_bfv3m")
disabled = true
debug_color = Color(0.568627, 0.545098, 0.32549, 0.419608)

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("hurtbox_component", "sprite") instance=ExtResource("5_8fq64")]
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite2D")
whiten_material = SubResource("ShaderMaterial_lfnok")

[node name="EncloseSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tnxa0")
volume_db = -19.746
bus = &"SE"

[node name="BrokenSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3b7kf")
volume_db = -19.746
pitch_scale = 1.23
bus = &"SE"

[connection signal="body_entered" from="ActivateArea" to="." method="_on_activate_area_body_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
